class Category < ApplicationRecord
    validates :name, presence: true
end
