class CreateChallengeParticipations < ActiveRecord::Migration[8.0]
  def change
    create_table :challenge_participations do |t|
      t.references :challenge, null: false, foreign_key: true
      t.references :user, null: false, foreign_key: true
      t.string :status, null: false
      t.datetime :joined_at, null: false
      t.bigint :total_points

      t.timestamps
    end
  end
end
