Table users {
  id integer [primary key]
  username varchar [not null]
  role varchar [not null, default: 'member']
  email varchar [not null]
  password varchar [not null]
  avatar_url text
  created_at timestamp
}



Table categories {
  id integer [primary key]
  name varchar
  created_at timestamptz
  updated_at timestamptz
}

Table challenges {
  id integer [primary key]
  creator_id integer
  category_id integer [not null]
  name varchar
  description text
  start_date date
  end_date date
  visibility varchar
  status varchar
  created_at timestamptz
  updated_at timestamptz
}

Table challenge_comment {
  id integer [primary key]
  challenge_id integer [not null]
  user_id integer [not null]
  body text [not null]
  edited_at timestamptz
  deleted_at timestamptz
  created_at timestamptz
  updated_at timestamptz
}

Table challenge_participations {
  id integer
  challenge_id integer
  user_id integer
  status varchar
  joined_at timestamptz
  total_points integer
  created_at timestamptz
  updated_at timestamptz
  Indexes {
  (challenge_id, user_id) [unique]
  }
}

Table badges {
  id integer [primary key]
  code varchar
  name varchar
  description text
  icon_url text
  created_at timestamptz
  updated_at timestamptz
}

Table user_badges {
  id integer [primary key]
  user_id integer
  badge_id integer
  challenge_id integer
  awarded_at timestamptz

  Indexes {
    (user_id, badge_id, challenge_id) [unique]
  }
}

Table challenge_request{
  id integer [primary key]
  challenge_id integer [not null]
  requester_id integer [not null]
  status join_request_status [not null,  default: 'pending']
  message text
  decided_by_id integer [not null]
  decided_at timestamptz
  created_at timestamptz
}

Table challenge_invites {
  id integer [primary key]
  challenge_id integer [not null]
  inviter_id integer [not null]
  invitee_user_id integer [not null]
  accepted_at timestamptz [not null]
  created_at timestamptz [not null]
  is_accepted boolean
}

Table bookmarked_challenges {
  id integer [primary key]
  user_id integer [not null]
  challenge_id integer [not null]
}


Ref challenges_creator: challenges.creator_id < users.id
Ref challenges_categorie: challenges.category_id < categories.id
Ref participations_challenge: challenge_participations.challenge_id < challenges.id
Ref participations_user: challenge_participations.user_id < users.id
Ref badges_user: user_badges.user_id < users.id
Ref badges_type: user_badges.badge_id < badges.id
Ref badge_challenge: user_badges.challenge_id < challenges.id
Ref id_challenge_request: challenge_request.challenge_id < challenges.id
Ref id_user_request: challenge_request.requester_id < users.id
Ref inviter_challenge_id: challenge_invites.inviter_id < users.id
Ref invitee_challenge_id: challenge_invites.invitee_user_id < users.id
Ref Challenge_invites_challenge_id: challenge_invites.challenge_id < challenges.id
Ref bookmarked_by: bookmarked_challenges.user_id < users.id
Ref bookmarked_challenge: bookmarked_challenges.challenge_id < challenges.id
Ref user_commented: challenge_comment.user_id < users.id
Ref challenge_commented: challenge_comment.challenge_id < challenges.id
